--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,9 @@ header .intro-text .skills {
   font-size: 1.25em;
   font-weight: 300;
 }
+header .intro-text .skills a {
+  color: #fff;
+}
 @media (min-width: 768px) {
   header .container {
     padding-top: 200px;
@@ -427,7 +430,7 @@ fieldset[disabled] .btn-success.active {
   padding-bottom: 23px;
   margin-bottom: 20px;
 }
-.white-job .label:nth-child(1), .white-job p{
+.white-job .labels, .white-job p{
   margin-left: 3%;
 }
 .ligne-job{
