--- a/css/style.css
+++ b/css/style.css
@@ -455,9 +455,15 @@ fieldset[disabled] .btn-success.active {
     margin-top: 10px;
   }
 }
-@media all and (max-width: 375px){
-  h2{
-    font-size: 2em !important;
+@media all and (max-width: 576px){
+  section h2{
+    font-size: 2em;
+  }
+  h3{
+    font-size: 1.5em;
+  }
+  h4{
+    font-size: 1.3em;
   }
 }
 .underline-a{
