--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -102,70 +102,6 @@ header .cell.menu {
     margin-left: 0.5rem;
 }
 
-.techno-badge {
-    width: 90px;
-    aspect-ratio : 1 / 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    transition: 0.25s;
-    position: relative;
-}
-
-.techno-badge:hover {
-    transform: scale(0.9);
-}
-
-.techno-badge-icon-container {
-    color: var(--white);
-    background-color: hsla(0,0%,6%,.5);
-    width: 60%;
-    aspect-ratio : 1 / 1;
-    font-size: 35px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 15px;
-}
-
-.techno-badge-label{
-    opacity: 0;
-    position: absolute;
-    transition: 0.25s;
-    background-color: rgba(50,50,50,.5);
-    border-radius: 5px;
-    font-size: 0.85rem;
-    padding: 4px;
-    color: var(--white);
-    text-wrap: nowrap;
-    bottom: 20%;
-}
-
-.techno-badge:hover .techno-badge-label {
-    opacity: 1;
-    bottom: -15px;
-}
-
-.skills-badge-container {
-    width: calc(25% - 2rem);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.skills-badge-container .techno-badge {
-    width: 120px;
-}
-
-.skills-badge-container .techno-badge .techno-badge-icon-container {
-    font-size: 48px;
-}
-
-.skills-badge-container .techno-badge .techno-badge-label {
-    font-size: 1.125rem;
-}
-
 .menu nav {
     overflow: hidden;
     width: auto;
@@ -203,4 +139,8 @@ header .cell.menu {
 
 .border-main-grey {
     border-color: var(--grey);
+}
+
+.hobbies .cell {
+    flex-wrap: nowrap;
 }
