--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,10 +1,20 @@
 :root {
     --mainColor: #4caf50;
-    --white: #f6f9fc;
     --grey: #d7e5f2;
-    --black: #061423;
     --empty-cell-width: 40px;
     --double-column: calc(65% - var(--empty-cell-width));
     --simple-column: calc(35% - var(--empty-cell-width));
     --title-section-width: calc(100% - (var(--empty-cell-width) * 2));
+    --main-white: #f6f9fc;
+    --main-black: #061423;
+}
+
+.light {
+    --theme-background: var(--main-white);
+    --theme-color: var(--main-black);
+}
+
+.dark {
+    --theme-background: var(--main-black);
+    --theme-color: var(--main-white);
 }
