Add custom icons + modify description

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -101,6 +101,32 @@ header .cell.menu {
     right: 0;
 }
 
+.experience-description p:not(:last-child) {
+    margin-bottom: 1rem;
+}
+
+.experience-description p a {
+    transition: 0.25s ease-in-out;
+}
+
+.experience-description p a:hover {
+    color: var(--mainColor);
+}
+
+.experience-description ol {
+    list-style: auto;
+    padding-left: 3rem;
+}
+
+.experience-description ol > li {
+    padding-bottom: 1rem;
+}
+
+.experience-description ul {
+    list-style: circle;
+    padding-left: 3rem;
+}
+
 .experience-title span {
     line-height: 30px;
     padding-bottom: 6px;
