--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 #home {
     display: flex;
     flex-direction: column;
@@ -29,15 +33,6 @@
 
 .cell-title {
     width: var(--title-section-width);
-}
-
-header .cell.name {
-    padding: 8px 40px;
-}
-
-header .cell.menu {
-    padding: 8px 40px;
-    justify-content: end;
 }
 
 .padding-40px {
@@ -131,33 +126,6 @@ header .cell.menu {
     line-height: 30px;
     padding-bottom: 6px;
     margin-left: 0.5rem;
-}
-
-.menu nav {
-    overflow: hidden;
-    width: auto;
-    flex-grow: 1;
-}
-
-.menu nav ul {
-    opacity: 0;
-    position: absolute;
-    transition: 0.5s;
-    right: -348px;
-}
-
-.menu .nav-menu.open nav ul {
-    opacity: 1;
-    right: 1rem;
-}
-
-.menu .nav-menu nav ul li {
-    transition: .3s ease-in-out;
-}
-
-.menu .nav-menu nav ul li:hover {
-    color: var(--mainColor);
-    scale: 1.1;
 }
 
 .text-main-color {
